--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,1 +1,28 @@
-/* No CSS *//*# sourceMappingURL=styles.css.map */
+#pop-up {
+  background-color: #ffffff;
+  position: fixed;
+  width: 300px;
+  height: 300px;
+  top: 40%;
+  left: 50%;
+  margin-top: -150px;
+  margin-left: -150px;
+  opacity: 0;
+  display: none;
+  z-index: 99;
+}
+
+#pop-up2 {
+  background-color: #ffffff;
+  position: fixed;
+  width: 300px;
+  height: 300px;
+  top: 40%;
+  left: 50%;
+  margin-top: -150px;
+  margin-left: -150px;
+  opacity: 0;
+  display: none;
+  z-index: 99;
+}
+/*# sourceMappingURL=styles.css.map */
